# milankovitch

./: .gitignore  README.md  notes.md  pyproject.toml
data/1634220214_2023-04-05/: manifest.json
data/1634220214_2023-04-05/data/pub/data/paleo/icecore/antarctica/epica_domec/: edc-co2-2008-bern-noaa.txt  edc-co2-2008-grenoble-noaa.txt  edc-dust2008.txt  edc-siegenthaler-co2-2008-bern-noaa.txt  edc-siegenthaler-co2-2008-grenoble-noaa.txt  edc3-composite-co2-2008-noaa.txt  taylor-edc3-co2-2008-noaa.txt  vostok-edc3-co2-2008-noaa.txt
data/1634220214_2023-04-05/metadata/: noaa-icecore-6080.json  noaa-icecore-6091.json  noaa-icecore-6092.json
milankovitch/: __init__.py  co2.py  composite.py  dust.py  lab.py  sealevel.py  temperature.py  utils.py
milankovitch/sources/: __init__.py  co2.py  dust.py  sealevel.py  temperature.py
style/: elegant.mplstyle
